--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,44 +1,60 @@
-.App {
-    font-family: sans-serif;
-    text-align: center;
-  }
-  
+
+.dashboard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background-color: rgba(255, 182, 193, 0.8); /* Light Pink background */
+  background-image: url('/public/quiz-bck.jpg'); 
+  background-size: cover; 
+  background-position: center; 
+  padding: 20px;
+  color: #fff; 
+  text-align: center; /* Center text horizontally */
+}
+
+@media (min-width: 768px) {
   .dashboard {
-    padding: 20px;
+    padding: 40px; 
   }
-  
+}
+
 .buttons {
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+@media (min-width: 768px) {
+  .buttons {
+    flex-direction: row; 
+    gap: 30px; 
   }
-  
-  .button {
-    padding: 10px 20px;
-    margin: 10px;
-    font-size: 16px;
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-  }
-  
-  .create-quiz {
-    background-color: #4caf50;
-    color: white;
-  }
-  
-  .create-quiz:hover {
-    background-color: #45a049;
-  }
-  
-  .quiz-list {
-    background-color: #008cba;
-    color: white;
-  }
-  
-  .quiz-list:hover {
-    background-color: #007bb5;
-  }
-  
+}
+
+.button {
+  padding: 15px 30px;
+  border-radius: 5px;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.create-quiz {
+  background-color: #4CAF50; 
+}
+
+.create-quiz:hover {
+  background-color: #45a049;
+}
+
+.quiz-list {
+  background-color: #2196F3;
+}
+
+.quiz-list:hover {
+  background-color: #1976D2;
+}
